fix: fix some broken styles

--- a/packages/p2p/src/components/modal-manager/modals/create-ad-add-payment-method-modal/create-ad-add-payment-method-modal.scss
+++ b/packages/p2p/src/components/modal-manager/modals/create-ad-add-payment-method-modal/create-ad-add-payment-method-modal.scss
@@ -11,6 +11,7 @@
 
         &--scroll {
             overflow: auto;
+            padding: 0;
         }
 
         &--horizontal {
